# qbc12-hw01

./: .dockerignore  .gitignore  03_airflow_pipeline_student.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml
A/: 01_dockerized_package_student.ipynb  README.md  requirements.txt
A/src/airbnb_ops/: pii.py  transform.py  validate.py
B/: HW01-B.txt
B/reports/: baseline_explain_analyze.txt  explain_notes.md  hw01_b_sql_performance.md
B/sql/: 01_baseline_neighbourhood_summary.sql  02_create_materialized_view.sql
C/dags/: qbc12_hw01_nazanin_hesari_airbnb_pipeline.py  qbc12_hw01_parham_rahimi_airbnb_pipeline.py
C/reports/: hw01_c_airflow.md
reports/: hw01_a_run_report.md
src/airbnb_ops/: __init__.py  cli.py  config.py  extract.py
